at the end of class 2 thgis is my work with live website

--- a/html/lab1/lab1index.html
+++ b/html/lab1/lab1index.html
@@ -43,6 +43,9 @@
             <div class="shadow box card-body"><a class="card-link" href="Hello.html"> Hello lab </a><br></div>
 
            <div class="shadow box card-body"><a class="card-link" href="favorites.html"> favorites </a></div>
+            <br></div>
+
+        <div class="shadow box card-body"><a class="card-link" href="Fav2.0.html"> favorites with tabination (not the prettiest ;(</a></div>
         </div>
     </div>
 </main>
