--- a/html/lab2/lab2index.html
+++ b/html/lab2/lab2index.html
@@ -42,8 +42,9 @@
             <a href="html/bootstrap-form.html">bootstrap-form.html</a> <br>
             <a href="html/feedback.html">feedback.html</a> <br>
             <a href="html/lab2.html">lab2 practice</a> <br>
-            <a href="html/conference-registration.html">requests</a> <br>
-            <a href="html/myform.html">myform</a> <br></div>
+            <a href="html/conference-registration.html">Conference Registration</a> <br>
+            <a href="html/myform.html">myform</a> <br>
+        </div>
 
     there is more html in the lab these are just the ones i think you asked for </div>
 </main>
