--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 <body class="container-lg">
 <header class="row-cols-lg-1">
     <h1> Web Client Server Spring 2020 </h1>
+    <h2>Dominic Beltrante</h2>
 </header>
-<nav aria-label="Page navigation example">
+<nav >
     <ul class="pagination justify-content-center">
-        <li class="page-item ">
-            <a class="page-link" href="#" tabindex="-1">Previous</a>
-        </li>
+
         <li class="page-item"><a class="page-link" href="html/lab1/lab1index.html">week 1</a></li>
         <li class="page-item"><a class="page-link" href="html/lab2/lab2index.html">week 2</a></li>
         <li class="page-item"><a class="page-link" href="html/week3.html">week 3</a></li>
         <li class="page-item"><a class="page-link" href="html/week4.html">week 4</a></li>
         <li class="page-item"><a class="page-link" href="html/week5.html">week 5</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#">Next</a>
-        </li>
+
+
     </ul>
 </nav>
+<Main>
+
+</Main>
 </body>
 </html>
