--- a/html/lab1/Fav2.0.html
+++ b/html/lab1/Fav2.0.html
@@ -11,56 +11,103 @@
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/bootstrap-reboot.css">
     <link rel="icon" href="../../images/Favinic.png">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../../css/normalize.css">
-<!--    <script>-->
-<!--    $(document).ready(function () {-->
-
-<!--        $('#content').load('Welcome.html');-->
-<!--        $('.button').click(function () {-->
-<!--            $('.nav-item').forEach(-->
-<!--                function () {-->
-<!--                if( $(this).id.val()== )-->
-<!--                }-->
-<!--            )-->
-<!--                    })-->
-<!--    })-->
-
-<!--    </script>-->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $( function() {
+            $( "#tabs" ).tabs();
+        } );
+    </script>
 
 
 </head>
 <body class="container" data-spy="scroll" data-target=".navbar" data-offset="50">
 <header class="modal-header">My Favorite Things<h1></h1>
     <h1>Dominic Beltrante</h1> </header>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark  align-content-center">
-
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <form action="">
-            <button id="btn-1" class="button" formaction="lab1index.html">lab1</button></form>
-        </li>
-        <li class="nav-item">
-            <button  id="btn-2" class="button" onclick="window.location.href='../lab2/lab2index.html'" >lab2</button>
-        </li>
-        <li class="nav-item">
-            <button id="btn-3" class="button">lab3</button>
-        </li>
-        <li class="nav-item">
-            <button id="btn-4" class="button">lab4</button>
-        </li>
-        <li class="nav-item">
-            <button id="btn-5" class="button">lab5</button>
-        </li>
-    </ul>
-
-</nav>
 
 <main id="content">
+    <div id="tabs">
+        <ul>
+            <li><a href="#tabs-1">Band</a></li>
+            <li><a href="#tabs-2">Food</a></li>
+            <li><a href="#tabs-3">Images</a></li>
+            <li><a href="#tabs-4">Books</a></li>
+            <li><a href="#tabs-5">Movie</a></li>
+        </ul>
 
+        <div id="tabs-1" class="container tab-pane box  thick-blue-border">
+                <h2>My Favorite Band/Artist</h2>
+                <p><a href="https://www.facebook.com/357-String-Band-95501189795/">Link To Band Page</a> <br>
+                    <span id="favorite-music-artist-name">The .357 String Band</span>
+                    I fell in love with these guys years ago when i lived in a loft in the NE arts district and was promoting bands and festivals as a hobby. Every time we met we would end up in some crazy Scooby Doo type adventure that would rival any movie plot. Still tp this day we are friends and people i will never forget!<br>
+                    <iframe width="420" height="315"
+                            src="https://www.youtube.com/embed/hPoUY_ikq9o">
+                    </iframe>
+                </p>
+        </div>
+
+        <div id="tabs-2" class="favorite-food-section box blue-box thick-blue-border ">
+                <h2>Some Favorite food</h2>
+                <ul>
+                    <li id="most-favorite-food" >Pizza <img src="img/pizza_slice-60140003.jpg" alt=""></li>
+                    <li>Steak <img src="img/steak.jpg" alt=""></li>
+                    <li>Sushi <img src="img/sushi.jpg" alt=""></li>
+                </ul>
+        </div>
+
+        <div id="tabs-3" class="fav-section box  thick-blue-border">
+                <h2>Some Favorite Images</h2>
+                <img class = "favorite-image" src="img/kitty2.png" alt="kitty">
+                <img src="img/buddy.jpg" alt="buddy" >
+                <img src="img/hennachickjpg.jpg" alt="buddy" >
+        </div>
+
+    <div id="tabs-4" class="books container tab-pane fav-section box thick-blue-border">
+            <h2 id="bottom">My Favorite Books</h2>
+            <table>
+
+                <thead>   <tr>
+                    <th>Book's Name</th>
+                    <th>Author</th>
+                    <th>Link</th>
+                    <th>Image</th>
+                </tr></thead>
+                <tbody><tr>
+                    <td>Happy Death</td>
+                    <td>Albert Camus</td>
+                    <td><a href="https://www.amazon.com/s/favorites.html?ie=UTF8&keywords=a+happy+death+albert+camus&tag=mh0b-20&index=aps&hvadid=78340258234928&hvqmt=e&hvbmt=be&hvdev=c&ref=pd_sl_2c1t4kw5k6_e"></a>find me on amazon!</td>
+                    <td><img src="img/happyd.jpg" alt="happydeathimg" ></td>
+                </tr>
+                <tr>
+                    <td>The Garden of Eden</td>
+                    <td>Ernest Hemmingway</td>
+                    <td><a href="https://www.amazon.com/Garden-Eden-Ernest-Hemingway/dp/0684804522/ref=sr_1_1?s=books&ie=UTF8&qid=1547764759&sr=1-1&keywords=the+garden+of+eden"></a>find me on amazon</td>
+                    <td>
+                        <img src="img/eden.jpg" alt="edenimg" ></td>
+
+
+                </tr></tbody>
+            </table>
+    </div>
+
+
+    <div id="tabs-5" class="container tab-pane active box thick-blue-border">
+        <h2>Favorite Movie</h2>
+        <p><a href="https://www.imdb.com/title/tt0110912/" >Link To IMDB</a>
+            <br>
+            The Movie <span id="favorite-movie-title active">Pulp Fiction</span> directed by Quentin Tarantino is a dark yet comical look into the lives of two mob hitmen, a boxer, a gangster's wife, and a pair of diner bandits intertwine in four tales of violence and redemption.
+        </p>
+
+    </div>
+    </div>
 </main>
+
 
 
 </body>
