--- a/html/lab2/html/myform.html
+++ b/html/lab2/html/myform.html
@@ -6,30 +6,30 @@
 
     <title>Myform</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" >
     <link rel="icon" href="../img/Favinic.png">
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 </head>
 <body id="wrapper">
-<div class="box">
+<div class="box container-lg ">
 <form>
     <h2 id="bottom">Conference Registration</h2>
     <br>
-    <label>Enter your name<input type="text" required maxlength="70" ></label>
+    <label>Enter your name<input class="form-check form-control" type="text" required maxlength="70" ></label>
     <br>
-    <label>Enter your email<input type="email" required></label>
+    <label>Enter your email<input class="form-check form-control" type="email" required></label>
     <br>
     <label>Comments
     <br>
     <textarea type="comments" id="comments" cols="38" required></textarea>
     </label>
     <br>
-    <label>Are you a current student?
+    <label class="form-check-label">Are you a current student?
     <br>
-    Yes<input name="student" id="yes" type="radio">
-        No<input name="student" id="No" type="radio"></label>
+    Yes<input name="time" id="morn" type="radio">
+        No<input name="time" id="No" type="radio"></label>
 
     <br>
     <label >Feedback
