--- a/html/lab1/lab1index.html
+++ b/html/lab1/lab1index.html
@@ -25,12 +25,12 @@
 
 
     <header class="box  column-md-12">
-        <h1> Web Client Server Spring 2020 </h1>
+        <button onclick="window.location.href='https://nicsins.github.io/WebClientServer2020/'"> <h1> Web Client Server Spring 2020 </h1></button>
     </header>
     <nav class="box column-md-12"  >
-        <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#">week 1</a></li>
-            <li class="page-item"><a class="page-link" href="../lab1/lab1index.html">week 2</a></li>
+            <ul class="pagination justify-content-center">
+            <li class="page-item"><a class="page-link" href="lab1index.html">week 1</a></li>
+            <li class="page-item"><a class="page-link" href="../lab2/lab2index.html">week 2</a></li>
             <li class="page-item"><a class="page-link" href="../week3.html">week 3</a></li>
             <li class="page-item"><a class="page-link" href="../week4.html">week 4</a></li>
             <li class="page-item"><a class="page-link" href="../week5.html">week 5</a></li>
