added video on index.html

--- a/html/lab2/lab2index.html
+++ b/html/lab2/lab2index.html
@@ -22,7 +22,7 @@
 <body id="wrapper">
 <
 <header class="box  column-md-12">
-    <button onclick="window.location.href='https://nicsins.github.io/WebClientServer2020/'"> <h1> Web Client Server Spring 2020 </h1></button>
+ <h1 onclick="window.location.href='https://nicsins.github.io/WebClientServer2020/'"> Web Client Server Spring 2020 </h1>
 </header>
 <nav class="box column-md-12"  >
     <ul class="pagination justify-content-center">
@@ -43,9 +43,10 @@
             <a href="html/lab2.html">lab2 practice</a> <br>
             <a href="html/conference-registration.html">Conference Registration</a> <br>
             <a href="html/myform.html">myform</a> <br>
-        </div>
+
 
     there is more html in the lab these are just the ones i think you asked for </div>
+    </div>
 </main>
 
 
