--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Dominic Beltrante</h2>
 </header>
 <nav >
-    <ul class="pagination justify-content-center">
+    <ul class="pagination justify-content-lg-start
 
         <li class="page-item"><a class="page-link" href="html/lab1/lab1index.html">week 1</a></li>
         <li class="page-item"><a class="page-link" href="html/lab2/lab2index.html">week 2</a></li>
@@ -24,8 +24,11 @@
 
     </ul>
 </nav>
-<Main>
-
-</Main>
+<main>
+<div class="justify-content-center ">
+    <h2>For all those teachers out there!</h2>
+    <div style="background-color:#000000;width:520px;"><div style="padding:4px;"><iframe src="//media.mtvnservices.com/embed/mgid:arc:video:comedycentral.com:89fc1260-7afb-41e0-80c4-34c36d206abf" width="512" height="288" frameborder="0" allowfullscreen="true"></iframe></div></div>
+</div>
+</main>
 </body>
 </html>
