added video on index.html added > that was missing onn index

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h2>Dominic Beltrante</h2>
 </header>
 <nav >
-    <ul class="pagination justify-content-lg-start
+    <ul class="pagination justify-content-lg-start>
 
-        <li class="page-item"><a class="page-link" href="html/lab1/lab1index.html">week 1</a></li>
+        <li class="page-item" ><a class="page-link" href="html/lab1/lab1index.html">week 1</a></li>
         <li class="page-item"><a class="page-link" href="html/lab2/lab2index.html">week 2</a></li>
         <li class="page-item"><a class="page-link" href="html/week3.html">week 3</a></li>
         <li class="page-item"><a class="page-link" href="html/week4.html">week 4</a></li>
