--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
 
 </head>
 <body class="container-lg">
-<header class="row-cols-lg-1">
-    <h1> Web Client Server Spring 2020 </h1>
-    <h2>Dominic Beltrante</h2>
-</header>
-<nav >
-    <ul class="pagination justify-content-lg-start>
+    <header class="row-cols-lg-1">
+        <h1> Web Client Server Spring 2020 </h1>
+        <h2>Dominic Beltrante</h2>
+    </header>
+    <nav >
+        <ul class="pagination justify-content-lg-start">
 
-        <li class="page-item" ><a class="page-link" href="html/lab1/lab1index.html">week 1</a></li>
-        <li class="page-item"><a class="page-link" href="html/lab2/lab2index.html">week 2</a></li>
-        <li class="page-item"><a class="page-link" href="html/week3.html">week 3</a></li>
-        <li class="page-item"><a class="page-link" href="html/week4.html">week 4</a></li>
-        <li class="page-item"><a class="page-link" href="html/week5.html">week 5</a></li>
+            <li class="page-item" ><a class="page-link" href="html/lab1/lab1index.html">week 1</a></li>
+            <li class="page-item"><a class="page-link" href="html/lab2/lab2index.html">week 2</a></li>
+            <li class="page-item"><a class="page-link" href="html/week3.html">week 3</a></li>
+            <li class="page-item"><a class="page-link" href="html/week4.html">week 4</a></li>
+            <li class="page-item"><a class="page-link" href="html/week5.html">week 5</a></li>
 
 
-    </ul>
-</nav>
-<main>
-<div class="justify-content-center ">
-    <h2>For all those teachers out there!</h2>
-    <div style="background-color:#000000;width:520px;"><div style="padding:4px;"><iframe src="//media.mtvnservices.com/embed/mgid:arc:video:comedycentral.com:89fc1260-7afb-41e0-80c4-34c36d206abf" width="512" height="288" frameborder="0" allowfullscreen="true"></iframe></div></div>
-</div>
-</main>
+        </ul>
+    </nav>
+    <main>
+        <div class="justify-content-center ">
+                <h2>For all those teachers out there!</h2>
+            <div style="background-color:#000000;width:520px;"><div style="padding:4px;">
+                <iframe src="//media.mtvnservices.com/embed/mgid:arc:video:comedycentral.com:89fc1260-7afb-41e0-80c4-34c36d206abf" width="512" height="288" ></iframe>
+            </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
