updating inex of labs

--- a/html/lab2/lab2index.html
+++ b/html/lab2/lab2index.html
@@ -22,7 +22,7 @@
 <body id="wrapper">
 <
 <header class="box  column-md-12">
- <h1 onclick="window.location.href='https://nicsins.github.io/WebClientServer2020/'"> Web Client Server Spring 2020 </h1>
+ <h1 onclick="window.location.href='https://nicsins.github.io/WebClientServer2020/'"> Web Client Server Fall 2020 </h1>
 </header>
 <nav class="box column-md-12"  >
     <ul class="pagination justify-content-center">
