--- a/html/lab3/lab3index.html
+++ b/html/lab3/lab3index.html
@@ -33,7 +33,7 @@
 
 <body class="container-lg">
 <header class="row-cols-lg-1">
-    <h1> Web Client Server Spring 2020 </h1>
+    <h1> Web Client Server Fall 2020 </h1>
     <h2>Dominic Beltrante</h2>
 </header>
 <nav >
